--- a/online_Shop_Bahar/src/components/Footer/Footer.css
+++ b/online_Shop_Bahar/src/components/Footer/Footer.css
@@ -27,7 +27,7 @@
 .footer-title {
   font-weight: 700;
   font-size: 1.1rem;
-  color: rgb(255, 144, 201);
+  color: var(--primary-color);
   margin-bottom: 1rem;
 }
 
@@ -44,11 +44,11 @@
 }
 
 .footer-links a:hover {
-  color: rgb(255, 144, 201);
+  color: var(--primary-color);
 }
 
 .social-icons a {
-  color: rgb(255, 144, 201);
+  color: var(--primary-color);
   font-size: 1.4rem;
   margin: 0 0.4rem;
   transition: color 0.3s ease;
