--- a/online_Shop_Bahar/src/index.css
+++ b/online_Shop_Bahar/src/index.css
@@ -6,8 +6,10 @@
   font-weight: 700;
   font-style: normal;
 }
-
-
+:root{
+    --primary-color: #fbb2ce;
+    --secondry-color: #ffd8ed;
+}
 
 body {
   font-family: "Vazirmatn", sans-serif;
@@ -43,7 +45,7 @@ a:visited,
 a:hover,
 a:active {
   text-decoration: none !important;
-   color: white;
+  color: white;
 }
 
 .title-container {
@@ -74,7 +76,7 @@ a:active {
   left: 0;
   width: 100%;
   height: 0.6em; /* height of the pink bar */
-  background: #ffd8ed;
+  background: var(--secondry-color);
   background: linear-gradient(
     nulldeg,
     rgba(255, 216, 237, 1) 0%,
@@ -83,10 +85,6 @@ a:active {
   z-index: 0;
   transform: translateY(30%); /* pushes the bar a bit lower */
 }
-
-
-
-
 
 .rounded {
   border-radius: 5px;
