image gallery added

--- a/online_Shop_Bahar/src/index.css
+++ b/online_Shop_Bahar/src/index.css
@@ -10,7 +10,9 @@
     --primary-color: #fbb2ce;
     --secondry-color: #ffd8ed;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-family: "Vazirmatn", sans-serif;
   font-weight: 400;
