--- a/online_Shop_Bahar/src/components/Navbar/Navbar.css
+++ b/online_Shop_Bahar/src/components/Navbar/Navbar.css
@@ -19,7 +19,7 @@
 .custom-offcanvas.show .dropdown-custom:hover,
 .custom-offcanvas.showing .dropdown-custom:hover,
 .custom-offcanvas.hiding .dropdown-custom:hover {
-  color: rgb(255, 177, 217) !important;
+  color:var(--active-color) !important;
   border-top: none !important;
   border-left: none !important;
   border-right: none !important;
@@ -87,7 +87,7 @@
 .custom-offcanvas.show .dropdown-custom:active,
 .custom-offcanvas.showing .dropdown-custom:active,
 .custom-offcanvas.hiding .dropdown-custom:active {
-  color: rgb(255, 177, 217) !important;
+  color: var(--active-color) !important;
   background-color: #fff !important;
   border-bottom: 1px solid rgb(238, 238, 238) !important;
   box-shadow: none !important;
@@ -158,7 +158,7 @@
 .nav Button:hover {
   border: 1px solid rgba(0, 0, 0, 0) !important;
   background-color: rgba(57, 73, 87, 0) !important;
-  color: rgb(255, 177, 217) !important;
+  color: var(--active-color) !important;
 }
 .nav Button:focus {
   border: 1px solid rgba(0, 0, 0, 0) !important;
@@ -169,7 +169,7 @@
 .nav Button:active {
   border: 1px solid rgba(0, 0, 0, 0) !important;
   background-color: rgba(57, 73, 87, 0) !important;
-  color: rgb(252, 102, 179) !important;
+  color: var(--active-color)!important;
 }
 
 .nav .menu-item,
@@ -185,7 +185,7 @@
 .nav a:hover {
   border: 1px solid rgba(0, 0, 0, 0);
   background-color: rgba(57, 73, 87, 0);
-  color: rgb(255, 177, 217);
+  color: var(--primary-color);
 }
 .nav .menu-item:focus,
 .nav a:focus {
@@ -197,7 +197,7 @@
 .nav a:active {
   border: 1px solid rgba(0, 0, 0, 0) !important;
   background-color: rgba(57, 73, 87, 0) !important;
-  color: rgb(252, 102, 179) !important;
+  color:var(--active-color) !important;
 }
 
 .dropdown-custom:hover,
@@ -226,6 +226,9 @@
 }
 
 /* Target the offcanvas container */
+.custom-offcanvas .btn-close:hover ,.custom-offcanvas .btn-close:focus,.custom-offcanvas .btn-close:active{
+box-shadow: none !important;
+}
 .custom-offcanvas.show {
   background: rgb(238, 238, 238);
   color: rgb(4, 4, 4);
@@ -345,4 +348,41 @@ input:hover {
   fill: #9e9ea7;
   width: 1rem;
   height: 1rem;
+}
+.shopOffCanvesHead .offcanvas-title{
+  margin-left: auto;
+  margin-right: auto;
+
+}
+.shopOffCanvesHead .btn-close{
+margin-left: 0% !important;
+}
+.shopOffCanvesHead .btn-close:hover ,.shopOffCanvesHead .btn-close:focus,.shopOffCanvesHead .btn-close:active{
+box-shadow: none !important;
+}
+.shopOffCanvesBody .cart-item{
+  border: 1px solid #bdbdbd;
+  border-radius: 16px;
+  padding: 12px;
+}
+.shopOffCanvesBody .final{
+ position: absolute;
+ bottom: 0;
+ right: 16px;
+ left: 16px;
+ margin-left: auto;
+ margin-right: auto;
+}
+.shopOffCanvesBody .buy{
+ width: 100%;
+ margin-left: auto;
+ margin-right: auto;
+ border: none;
+ background-color: var(--primary-color);
+ box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
+.shopOffCanvesBody .buy:hover ,.shopOffCanvesBody .buy:active{
+
+ background-color: var(--active-color);
+ box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
 }
