--- a/online_Shop_Bahar/src/components/ProductCard/ProductCard.css
+++ b/online_Shop_Bahar/src/components/ProductCard/ProductCard.css
@@ -371,11 +371,11 @@
 /* --- HOVER EFFECTS --- */
 .hover-buttons .buy:hover,
 .hover-buttons .basket:hover {
-  background-color: #f28eb8;
+  background-color: var(--active-color);
 }
 .hover-buttons .buy:active,
 .hover-buttons .basket:active {
-  background-color: #f28eb8 !important;
+  background-color: var(--active-color) !important;
 }
 
 /* --- RESPONSIVE --- */
