--- a/online_Shop_Bahar/src/index.css
+++ b/online_Shop_Bahar/src/index.css
@@ -6,10 +6,10 @@
   font-weight: 700;
   font-style: normal;
 }
-:root{
-    --primary-color: #fbb2ce;
-    --secondry-color: #ffd8ed;
-    --active-color: #f28eb8;
+:root {
+  --primary-color: #fbb2ce;
+  --secondry-color: #ffd8ed;
+  --active-color: #f28eb8;
 }
 html {
   scroll-behavior: smooth;
@@ -98,6 +98,26 @@ a:active {
   background-position: center;
   width: 100%;
   height: 70vh;
+}
+.flexWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: var(--primary-color);
+  height: 100%;
+}
+
+.divider {
+  width: 10%;
+  background-color: var(--primary-color);
+  border-radius: 5px;
+  height: 0.2rem;
+  margin: 0 15px;
+}
+.divider::after,
+.divider::before {
+  display: none;
 }
 
 /* Large and down (below 992px) */
