--- a/online_Shop_Bahar/src/index.css
+++ b/online_Shop_Bahar/src/index.css
@@ -104,8 +104,29 @@ a:active {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: var(--primary-color);
   height: 100%;
+}
+
+.active-step {
+  color: var(--primary-color);
+  font-weight: bold;
+}
+
+.completed-step {
+  /* opacity: 0.6; */
+  color: var(--primary-color) !important;
+}
+
+.divider {
+  width: 40px;
+  height: 2px;
+  background: #ccc;
+  margin: 0 10px;
+}
+
+.checkout-content {
+  padding: 20px;
+  min-height: 400px;
 }
 
 .divider {
