--- a/src/shared/components/Navbar/Navbar.css
+++ b/src/shared/components/Navbar/Navbar.css
@@ -467,3 +467,36 @@ input:hover {
     display: none;
   }
 }
+.products-wrapper {
+  position: relative;
+}
+
+.mega-menu {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background: white;
+  min-width: 400px;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 10px 30px rgba(0,0,0,.1);
+  z-index: 9999;
+}
+.menu-item{
+  padding: 10px;
+}
+.products-trigger {
+  display: inline-flex;
+  align-items: center;
+  gap: 6px;         
+  white-space: nowrap;
+}
+
+
+.dropdown-icon {
+  transition: transform .2s ease;
+}
+
+.dropdown-icon.open {
+  transform: rotate(180deg);
+}
